[signin] user manager ui updates.

- removed rule-lines under title
- bring title closer to content
- content centers vertically in the window
- supervisor icons removed

Bug: 721252
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I72c6c035efb5911d2360d32abe7b9bb06ee98038
Reviewed-on: https://chromium-review.googlesource.com/753364
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Reviewed-by: Jérôme Lebel <jlebel@chromium.org>
Commit-Queue: Scott Chen <scottchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514472}
Former-commit-id: f693ed6ba49ae613b04f641b1ebf252af0167ef4