chrome/browser/ui/webui/signin/md_user_manager_ui.cc
@@ -83,7 +83,6 @@ content::WebUIDataSource* MDUserManagerUI::CreateUIDataSource(
   source->AddResourcePath("create_profile.js", IDR_MD_CREATE_PROFILE_JS);
   source->AddResourcePath("error_dialog.html", IDR_MD_ERROR_DIALOG_HTML);
   source->AddResourcePath("error_dialog.js", IDR_MD_ERROR_DIALOG_JS);
-  source->AddResourcePath("icons.html", IDR_MD_USER_MANAGER_ICONS_HTML);
   source->AddResourcePath("import_supervised_user.html",
                           IDR_MD_IMPORT_SUPERVISED_USER_HTML);
   source->AddResourcePath("import_supervised_user.js",
